# tinkr

./: Cargo.toml  README.md  release.sh
.claude/: settings.local.json
src/: apperror.rs  arrays.rs  bytes.rs  colors.rs  date_utils.rs  keys.rs  lib.rs  numbers.rs  status.rs  storage_authed_trait.rs  strings.rs  surrealtypes.rs  theme.rs  urls.rs
src/admin/: dev_admin.rs  mod.rs
src/apps/: mod.rs
src/auth/: account.rs  account_details.rs  adapter_rs_surreal.rs  authcheck.rs  callback.rs  guest.rs  mod.rs  oauth.rs  session.rs  token.rs  ui_auth.rs  user.rs
src/boring_avatars/: README.md  mod.rs  playground.rs  utilities.rs
src/boring_avatars/components/: avatar_bauhaus.rs  avatar_beam.rs  avatar_marble.rs  avatar_pixel.rs  avatar_ring.rs  avatar_sunset.rs  mod.rs
src/builds/: coolify_user.rs  deployments.rs
src/components/: alert.rs  animated_demo.rs  appheader.rs  button.rs  checkbox.rs  color_picker.rs  colors_ui_app.rs  dropdown.rs  feature_card.rs  footer.rs  form.rs  form_section.rs  heading.rs  hero.rs  image.rs  image_upload.rs  input.rs  label.rs  loading.rs  logo.rs  mod.rs  modal.rs  navbar.rs  navigation_back_button.rs  page.rs  page_error_404.rs  particle_animation.rs  progress_bar.rs  section.rs  select.rs  seperator.rs  sidebar.rs  submit_button.rs  tabs.rs  timer.rs  tooltip.rs  user_avatar.rs  user_navbutton.rs  version.rs
src/db/: cached_surrealdb.rs  connection.rs  mod.rs  settings.rs  storage_trait.rs
src/email/: address.rs  mod.rs  resend.rs
src/logs/: logs_ui.rs  mod.rs  tracing_layer.rs
src/middleware/: compression.rs  health.rs  logging.rs  metrics.rs  metrics_auth.rs  mod.rs  server_fn_logging.rs  tracing.rs
src/organization/: mod.rs  organization.rs  organization_component_list.rs  organization_selector.rs  ui_organization_edit.rs  ui_organization_form.rs  ui_organization_new.rs
src/payments/: mod.rs  payment.rs
src/payments/payfast/: mod.rs  notify.rs  payfast_button.rs
src/server/: mod.rs
src/settings/: avatar_edit.rs  home.rs  mod.rs  profile.rs  upload.rs  upload_ssr.rs
src/team/: mod.rs  team.rs  team_management.rs  team_management_basic.rs  team_management_simple.rs
src/telemetry/: mod.rs
src/users/: mod.rs  user_list.rs  user_profile.rs
src/utils/: mimetype.rs
src/wallet/: currency_wallet_picker.rs  mod.rs  ui_wallet_edit.rs  ui_wallet_list.rs  ui_wallet_new.rs  ui_wallet_view.rs  wallet.rs
src/wallet/evm/: chains.rs  demo.rs  ethereum.rs  home.rs  mod.rs  rpc_search.rs  wallet.rs
src/wallet/metamask/: adapter.rs  checksum.rs  connect_button.rs  context.rs  mod.rs  verify_save.rs  wallet.rs
