[package]
name = "tinkr"
version = "0.0.1"
edition = "2024"
authors = ["Rouan van der Ende (rouan@netron.dev)"]
description = "Core application library with Leptos framework support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/netrondev/tinkr"
homepage = "https://github.com/netrondev/tinkr"
documentation = "https://docs.rs/tinkr"
readme = "README.md"
keywords = ["leptos", "web", "framework"]
categories = ["web-programming"]
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive", "std"] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
serde_json = { version = "1.0.140", features = ["std"] }
anyhow = { version = "1.0.99", optional = true }
tracing = { version = "0.1.41", optional = true }

# Always needed dependencies
leptos = { version = "0.8.10" }
phosphor-leptos = { version = "0.8.0" }
web-sys = { version = "0.3.77", features = [
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "ProgressEvent",
    "DragEvent",
    "Event",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Window",
    "Performance",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Document",
] }
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
js-sys = { version = "0.3.77" }

leptos_router = { version = "0.8.8" }

# Feature-specific dependencies
surrealdb = { version = "2.3.8", features = [
    "protocol-ws",
    "protocol-http",
], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
axum = { version = "0.8.0", features = [
    "json",
    "multipart",
    "macros",
], optional = true }
http = { version = "1.3.1", optional = true }
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
    "stream",
], optional = true }
resend-rs = { version = "0.17.1", optional = true }
tw_merge = { version = "0.1.6", features = ["variant"] }
hex = { version = "0.4.3", default-features = false, features = [
    "std",
], optional = true }
bytes = { version = "1.10.1", default-features = false, features = [
    "std",
], optional = true }

tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "sync",
], optional = true }
dotenvy = { version = "0.15.7", optional = true }
cached = { version = "0.56.0", features = [
    "async",
    "proc_macro",
    "disk_store",
], optional = true }
thiserror = { version = "2.0.16", default-features = false, optional = true }
async-trait = { version = "0.1.89", optional = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "env-filter",
    "fmt",
    "std",
    "ansi",
], optional = true }
uuid = { version = "1.17.0", default-features = false, features = [
    "v4",
    "serde",
], optional = true }
partial_struct = { version = "0.4.5" }
regex = { version = "1.11.2", default-features = false, features = [
    "std",
    "perf",
], optional = true }

alloy = { version = "1.0.27", features = ["full"], optional = true }
axum-extra = { version = "0.10.1", features = ["cookie"], optional = true }
base64 = { version = "0.22.1", default-features = false, features = [
    "std",
], optional = true }
futures = { version = "0.3.31", optional = true }
leptos_axum = { version = "0.8.6", optional = true }
leptos-use = { version = "0.16.3", optional = true }
rand = { version = "0.9.2", optional = true }
time = { version = "0.3.41" }
urlencoding = { version = "2.1.3" }
wasm-bindgen-futures = { version = "0.4.45" }
image = { version = "0.25.6", default-features = false, features = [
    "webp",
    "jpeg",
    "png",
], optional = true }
jpeg-encoder = { version = "0.6", optional = true }
infer = { version = "0.19", optional = true }


[features]
default = ["ssr"]
hydrate = ["serde-wasm-bindgen"]
ssr = [
    "anyhow",
    "alloy",
    "async-trait",
    "futures",
    "axum",
    "axum-extra",
    "base64",
    "rand",
    "bytes",
    "cached",
    "dotenvy",
    "hex",
    "http",
    "reqwest",
    "leptos_axum",
    "resend-rs",
    "surrealdb",
    "leptos-use/ssr",
    "thiserror",
    "tokio",
    "tracing-subscriber",
    "tracing",
    "uuid",
    "regex",
    "image",
    "jpeg-encoder",
    "infer",
]
